@@ -1,3 +1,4 @@
+	* deprecated compact storage allocation
 	* close files in separate thread on systems where close() may block (Mac OS X for instance)
 	* don't create all directories up front when adding torrents
 	* support DHT scrape
